# aoc-2024

./: .clang-format  .gitignore  CMakeLists.txt  README.md  create-day.sh  submit.sh
01-historian-hysteria/: main.cc
02-red-nosed-reports/: main.cc
03-mull-it-over/: main.cc
04-cares-search/: main.cc
05-print-queue/: main.cc
06-guard-gallivant/: main.cc
07-bride-repair/: main.cc
08-resonant-collinerity/: main.cc
09-disk-fragmenter/: main-alt.cc  main.cc
09-disk-framenter/: main.cc
10-hoof-it/: main.cc
11-plutonian-pebbles/: main.cc
12-garden-groups/: main.cc
13-claw-contraption/: main.cc
14-restroom-redoubt/: main.cc
15-warehouse-woes/: main.cc
16-reindeer-maze/: main.cc
17-chronospatial-computer/: main.cc
18-ram-run/: main-alt.cc  main.cc
19-linen-layout/: main.cc
20-race-condition/: main.cc
21-keypad-conundrum/: main.cc
22-monkey-market/: main.cc
23-lan-party/: main.cc
24-crossed-wires/: main.cc
25-code-chronicle/: main.cc
include/: 2dgrid.h  split.h  util.h
